--- a/agentic_ai_system/pyproject.toml
+++ b/agentic_ai_system/pyproject.toml
@@ -14,11 +14,11 @@ dependencies = [
     "numpy>=1.24.0",
     "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
-    "google-generativeai>=0.8.0",
+    "ollama>=0.1.8",
     "python-dotenv>=1.0.0",
     "tabulate>=0.9.0",
     "rich>=13.0.0",
-    "pyyaml>=6.0.0"
+    "pyyaml>=6.0.0",
 ]
 
 [project.scripts]
@@ -40,7 +40,7 @@ python = ">=3.10,<3.14"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
 crewai = { extras = ["tools"], version = ">=0.177.0,<1.0.0" }
-# I've commented out the original dependencies here since they are now in the [project] table
+ollama = ">=0.1.8"               
 
 [tool.poetry.scripts]
 agentic_ai_system = "agentic_ai_system.main:run"
@@ -55,6 +55,7 @@ type = "crew"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
 
 
 
