--- a/agentic_ai/pyproject.toml
+++ b/agentic_ai/pyproject.toml
@@ -3,7 +3,7 @@ name = "agentic_ai"
 version = "0.1.0"
 description = "Agentic AI using CrewAI and Ollama"
 authors = [
-    { name = "Your Name", email = "you@example.com" }
+    { name = "neha", email = "nehasureddi@gmail.com" }
 ]
 readme = "README.md"
 requires-python = ">=3.10,<3.14"
@@ -20,6 +20,7 @@ dependencies = [
     "rich>=13.0.0",
     "pyyaml>=6.0.0",
     "litellm>=1.0.0",
+    "google-genai>=0.8.0",
 ]
 
 [project.scripts]
@@ -35,4 +36,14 @@ type = "crew"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/agentic_ai"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src/agentic_ai",
+  "README.md",
+  "pyproject.toml"
+]
 
