--- a/agentic_ai/src/agentic_ai/config/llm_config.yaml
+++ b/agentic_ai/src/agentic_ai/config/llm_config.yaml
@@ -3,62 +3,33 @@
 
 # Model configurations
 models:
-  # TinyLlama - Fast, lightweight model for simple operations
+  # Gemini Flash 1.5 - Preferred model for all agents
+  gemini_flash:
+    provider: "gemini"
+    model_name: "gemini-1.5-flash-latest"
+    api_key_env: "GOOGLE_API_KEY" # also supports GEMINI_API_KEY via code
+    description: "Google's efficient model for all tasks"
+    capabilities:
+      - all
+
+  # TinyLlama - Fallback only
   tinyllama:
     provider: "ollama"
     model_name: "tinyllama"
     api_base: "http://localhost:11434"
-    description: "Fast local model for data ingestion and standardization tasks"
+    description: "Local fallback for when Gemini key is missing"
     capabilities:
-      - data_loading
-      - basic_data_validation
-      - simple_transformations
-      - schema_documentation
-    
-  # Perplexity - Advanced model for complex analysis
-  perplexity:
-    provider: "perplexity"
-    model_name: "sonar"
-    api_key_env: "PERPLEXITY_API_KEY"
-    description: "Advanced model for complex analysis and policy insights"
-    capabilities:
-      - complex_analysis
-      - pattern_recognition
-      - policy_recommendations
-      - strategic_thinking
-      - executive_summaries
+      - fallback
 
 # Agent-to-model mapping
 agent_model_mapping:
-  # Use Perplexity for all agents to ensure proper tool execution
-  data_ingestion_agent: "perplexity"
-  data_standardization_agent: "perplexity"
-  analysis_agent: "perplexity"
-  policy_insights_agent: "perplexity"
+  data_ingestion_agent: "gemini_flash"
+  data_standardization_agent: "gemini_flash"
+  analysis_agent: "gemini_flash"
+  policy_insights_agent: "gemini_flash"
 
 # Fallback configuration
 fallback_model: "tinyllama"
 
-# Model selection criteria
 model_selection:
-  # Use Perplexity for tasks requiring:
-  perplexity_triggers:
-    - "analysis"
-    - "insights"
-    - "policy"
-    - "recommendations"
-    - "strategic"
-    - "complex"
-    - "pattern"
-    - "trend"
-  
-  # Use TinyLlama for tasks requiring:
-  tinyllama_triggers:
-    - "load"
-    - "read"
-    - "validate"
-    - "clean"
-    - "transform"
-    - "standardize"
-    - "schema"
-    - "documentation"
+  # No dynamic selection needed; Gemini default, TinyLlama fallback only
